# genai-rs

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TROUBLESHOOTING.md
.github/workflows/: ci-flakiness-report.yml  claude-code-review.yml  rust.yml
docs/: AGENTS_AND_BACKGROUND.md  ANTIGRAVITY.md  ANTIGRAVITY_BRIDGE_DESIGN.md  BUILDER_API.md  BUILT_IN_TOOLS.md  CONFIGURATION.md  CONVERSATION_PATTERNS.md  ENUM_WIRE_FORMATS.md  ERROR_HANDLING.md  EXAMPLES_INDEX.md  EXAMPLE_PROJECTS.md  FUNCTION_CALLING.md  INTERACTIONS_API_GAP.md  LOGGING_STRATEGY.md  MULTIMODAL.md  MULTI_TURN_FUNCTION_CALLING.md  OUTPUT_MODALITIES.md  RELIABILITY_PATTERNS.md  RETRY_PATTERNS.md  STREAMING_API.md  TESTING.md  THINKING_MODE.md
examples/: antigravity_agent.rs  auto_function_calling.rs  cancel_interaction.rs  code_execution.rs  computer_use.rs  deep_research.rs  explicit_turns.rs  file_search.rs  google_maps.rs  google_search.rs  image_generation.rs  manual_function_calling.rs  parallel_and_compositional_functions.rs  pdf_input.rs  response_passthrough.rs  retrieval_grounding.rs  simple_interaction.rs  stateful_interaction.rs  streaming.rs  streaming_auto_functions.rs  structured_output.rs  system_instructions.rs  text_to_speech.rs  thinking.rs  thought_echo.rs  url_context.rs  webhooks_and_background.rs
examples/real_world/: README.md
examples/real_world/data_analysis/: main.rs
examples/real_world/multi_turn_agent_manual/: main.rs
examples/real_world/multi_turn_agent_manual_stateless/: main.rs
examples/real_world/rag_system/: main.rs
examples/real_world/repo_auditor/: README.md  main.rs  report.rs
examples/real_world/repo_auditor/fixture/: .env  README.md
examples/real_world/repo_auditor/fixture/app/: backup.py  database.py
examples/real_world/web_scraper_agent/: README.md  main.rs
genai-rs-macros/: Cargo.toml
proptest-regressions/: proptest_tests.txt
src/: agents.rs  client.rs  content.rs  content_tests.rs  environment.rs  interactions_api.rs  lib.rs  proptest_tests.rs  request.rs  request_tests.rs  response.rs  response_format.rs  response_tests.rs  steps.rs  streaming.rs  streaming_tests.rs  tools.rs  webhooks.rs  wire.rs  wire_streaming.rs
src/antigravity/: config.rs  handshake.rs  hooks.rs  mod.rs  process.rs  protocol.rs  session.rs  streaming.rs  tools.rs  triggers.rs
src/http/: agents.rs  common.rs  context.rs  error_helpers.rs  files.rs  interactions.rs  mod.rs  sse_parser.rs  webhooks.rs
src/request_builder/: auto_functions.rs  mod.rs  tests.rs
tests/: antigravity_harness.rs  api_canary_tests.rs  api_wire_format_live_tests.rs  function_calling_tests.rs  interaction_builder_tests.rs  interactions_api_tests.rs  multimodal_tests.rs  multiturn_tests.rs  proptest_roundtrip_tests.rs  streaming_multiturn_tests.rs  streaming_resume_tests.rs  strict_unknown_tests.rs  tools_and_config_tests.rs  unknown_variant_tests.rs  webhooks_and_agents_tests.rs  wire_format_verification_tests.rs
tests/common/: mod.rs
