[workspace]
members = [
    "genai-rs-macros",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json", "rustls", "stream"] }
tokio = { version = "1.52", features = ["full"] }
async-stream = "0.3"
futures-util = "0.3"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
inventory = "0.3"
bytes = "1.11"
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
utoipa = "5.5"
chrono = { version = "0.4", features = ["serde"] }

[package]
name = "genai-rs"
version = "0.7.2"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "A Rust client library for Google's Generative AI (Gemini) API with streaming, function calling, and multi-turn conversations"
repository = "https://github.com/evansenter/genai-rs"
documentation = "https://docs.rs/genai-rs"
readme = "README.md"
keywords = ["gemini", "google", "ai", "llm", "genai"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
genai-rs-macros = { version = "0.7.2", path = "./genai-rs-macros" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
base64 = "0.22"
# Dependencies from genai-client
tokio-util = { version = "0.7", features = ["io"] }
colored = { version = "3", optional = true }
colored_json = { version = "5", optional = true }
regex = "1"
urlencoding = "2"
# Antigravity harness client (feature = "antigravity"). The harness WebSocket
# is localhost-only (ws://), so no TLS features are needed.
tokio-tungstenite = { version = "0.29", optional = true }

[target.'cfg(unix)'.dependencies]
# SIGTERM escalation during harness shutdown (feature = "antigravity").
libc = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
trybuild = "1.0.114"
tempfile = "3.15"
bytes = { workspace = true }
futures-util = { workspace = true }
proptest = "1.11"
chrono = { workspace = true }
doc-comment = "0.3"
rand = "0.9"
backon = "1.6"

[features]
default = ["wire-color"]

## Colored output for the LoudWirePrinter wire inspector (LOUD_WIRE=1).
##
## Enabled by default. Disable (`default-features = false`) to drop the
## `colored` and `colored_json` dependencies; wire output falls back to
## plain pretty-printed text.
wire-color = ["dep:colored", "dep:colored_json"]

## Strict mode for unknown content types.
##
## When enabled, encountering unknown content types in API responses will
## return deserialization errors instead of gracefully capturing them in
## Unknown variants. Use this if you want to fail-fast when the API returns
## content types your code doesn't handle.
##
## Default: disabled (unknown types are captured gracefully)
strict-unknown = []

## Native client for Google's Antigravity `localharness` agent runtime.
##
## Adds the `genai_rs::antigravity` module: spawn the harness binary, drive
## agent conversations over its local WebSocket protocol, dispatch custom
## Rust tools, and enforce tool policies. See `docs/ANTIGRAVITY.md`.
##
## Default: disabled
antigravity = ["dep:tokio-tungstenite", "dep:libc"]

# Feature-gated integration tests
[[test]]
name = "antigravity_harness"
required-features = ["antigravity"]

# Feature-gated examples
[[example]]
name = "antigravity_agent"
required-features = ["antigravity"]

# Real-world example applications
[[example]]
name = "repo_auditor"
path = "examples/real_world/repo_auditor/main.rs"
required-features = ["antigravity"]

[[example]]
name = "rag_system"
path = "examples/real_world/rag_system/main.rs"

[[example]]
name = "multi_turn_agent_auto"
path = "examples/real_world/multi_turn_agent_auto/main.rs"

[[example]]
name = "multi_turn_agent_manual"
path = "examples/real_world/multi_turn_agent_manual/main.rs"

[[example]]
name = "multi_turn_agent_manual_stateless"
path = "examples/real_world/multi_turn_agent_manual_stateless/main.rs"

[[example]]
name = "code_assistant"
path = "examples/real_world/code_assistant/main.rs"

[[example]]
name = "data_analysis"
path = "examples/real_world/data_analysis/main.rs"

[[example]]
name = "web_scraper_agent"
path = "examples/real_world/web_scraper_agent/main.rs"

[[example]]
name = "testing_assistant"
path = "examples/real_world/testing_assistant/main.rs"

# Workspace-level metadata

[profile.dev]
opt-level = 1
debug = 1

[profile.dev.package."*"]
opt-level = 2

[profile.test]
inherits = "dev"
